--- a/Website/detail.html
+++ b/Website/detail.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="prelorder/Pelorder.css" />
     <script src="js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/line-numbers/prism-line-numbers.min.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link rel="stylesheet" href="Search box/w3-CSS.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs//prism/1.24.1/plugins/line-numbers/prism-line-numbers.min.css" /> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script> -->
+    <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" /> -->
+    <!-- <link rel="stylesheet" href="Search box/w3-CSS.css"> -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism.min.css"> -->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&family=Lora:ital@1&family=Montserrat:ital,wght@1,300&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"> 
      
 </head>
@@ -232,7 +232,7 @@
 
 
   <!-- Include the clipboard.js library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-core.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/plugins/autoloader/prism-autoloader.min.js"></script>
@@ -241,11 +241,10 @@
 
 
 
-  <script src="../js/script.js"></script>
-  <script>
-    // Initialize Prism
-    Prism.highlightAll();
-
+<script>
+  // Initialize Prism
+  Prism.highlightAll();
+  
     // Initialize Clipboard.js
     new ClipboardJS('.copy-button');
    
@@ -260,13 +259,14 @@ function w3_close() {
 }
 
 
+
+
+
+
+
+  </script> -->
   
-
-
-
-
-  </script>
-    
+  <script src="../js/script.js"></script>
   <script src="../prelorder/prelorder.js"></script>
   <script src="../Search box/w3.js"></script>
   </body>
