--- a/Website/index.html
+++ b/Website/index.html
@@ -115,11 +115,11 @@
 </a>
 
 
-<div class="social d-flex gap-3 position-absolute">
+<div class="social d-flex gap-3 position-absolute"  >
     <a href="https://github.com/Sahil-Shrama">
         <i class="fab fa-github fa-3x text-white"></i>
-    </a>
-    <a href="https://www.instagram.com/s._sahil._/">
+      </a>
+      <a href="https://www.instagram.com/s._sahil._/">
         <i class="fab fa-instagram fa-3x text-white"></i>
     </a>
     <a href="#">
@@ -137,6 +137,7 @@
     
 
 
+<div class="pb-5 p-md-0"></div>
    
 
 
@@ -171,6 +172,5 @@
     <script src="js/script.js"></script>
     <script src="prelorder/prelorder.js"></script>
     <script src="Search box/w3.js"></script>
-    
 </body>
 </html>
