--- a/Website/indexes/index1.html
+++ b/Website/indexes/index1.html
@@ -38,18 +38,18 @@
     <!-- sidebar -->
   
     <div class="w3-sidebar pt-5 w3-bar-block" style="display:none;z-index:5" id="mySidebar">
-        <button class="w3-bar-item w3-button w3-xxlarge bg-primary text-white px-2" >Java </button>
+        <button class="w3-bar-item w3-button w3-xxlarge d-flex justify-content-center align-items-center bg-primary text-white px-2" >Java </button>
         
             <div class="mt-2 d-flex justify-content-between">
           <span class="fa-stack fa-lg">
             <a href="https://github.com/Sahil-Shrama">
-              <i class="text-primary fas fa-circle fa-stack-2x"></i>
+              <i class="text-primary fas fa-circle fa-stack-2x text-dark"></i>
               <i class="fas fab fa-github fa-stack-1x text-white"></i>
             </a>
           </span>
           <span class="  fa-stack fa-lg"  onclick="w3_close()" >
             <a href="#">
-              <i class="text-primary fas fa-circle fa-stack-2x"></i>
+              <i class="text-primary fas fa-circle fa-stack-2x text-dark"></i>
               <i class="  fa-stack-1x text-white">x</i>
             </a>
           </span>
@@ -397,7 +397,7 @@ The code simply prints the message "hello world" when the program is executed.
 </div>
 
 
-<div class=" container  btn btn-group justify-content-between">
+<div class=" container  btn btn-group justify-content-between border-0">
   <button class=" copy-button "><a class="text-decoration-none" href="../index.html">
     Home
   </a></button>
